--- a/.github/workflows/master_universityhub.yml
+++ b/.github/workflows/master_universityhub.yml
@@ -40,6 +40,8 @@ jobs:
     environment:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+    env:
+      CONNECTIONSTRING: ${{ secrets.CONNECTIONSTRING }}
 
     steps:
       - name: Download artifact from build job
@@ -55,4 +57,4 @@ jobs:
           slot-name: 'Production'
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_3C4DECCF13FF4FFCAE3D409360E7B690 }}
           package: .
-          env: ConnectionString=${{ secrets.CONNECTIONSTRING }}
+          app-settings: "ConnectionString=${{ env.CONNECTIONSTRING }}"
